    in one call (Bborie Park / UC Davis)
  - #1643, Tiger Geocoder - Tiger 2011 loader 
    (Regina Obe / Paragon Corporation) Funded by Hunter Systems Group
  - GEOMETRYCOLLECTION support for ST_MakeValid (Sandro Santilli / Vizzuality)
  - ST_PixelOfValue (Bborie Park / UC Davis)
  - Casts to/from PostgreSQL geotypes (point/path/polygon).
  - #2030, n-raster (and n-band) ST_MapAlgebra (Bborie Park / UC Davis)

* Enhancements *
  - #823, tiger geocoder: Make loader_generate_script download portion less greedy
  - #1363, ST_AddBand(raster, ...) array version rewritten in C
  - #1364, ST_Union(raster, ...) aggregate function rewritten in C
  - #1661, Add aggregate variant of ST_SameAlignment
  - #1719, Add support for Point and GeometryCollection ST_MakeValid inputs
  - #1796, Big performance boost for distance calculations in geography
  - #1802, improved function interruptibility.
  - #1856, tiger geocoder: reverse geocoder rating setting for prefer numbered highway name
  - #1938, Refactor basic ST_AddBand to add multiple new bands in one call
  - #1978, wrong answer when calculating length of a closed circular arc (circle)
  - #1780, support ST_GeoHash for geography
  - #2021, Added multi-band support to ST_Union(raster, ...) aggregate function
  - #2006, better support of ST_Area(geography) over poles and dateline
  - TopologySummary output now includes unregistered layers and a count
    of missing TopoGeometry objects from their natural layer.
  - ST_HillShade(), ST_Aspect() and ST_Slope() have one new optional parameter to
    interpolate NODATA pixels before running the operation.

* Fixes *

  - #1839, handling of subdatasets in GeoTIFF in raster2pgsql.
  - #1840, fix logic of when to compute # of tiles in raster2pgsql.
  - #1870, align the docs and actual behavior of raster's ST_Intersects
  - #1872, fix ST_ApproxSummarystats to prevent division by zero
  - #1875, ST_SummaryStats returns NULL for all parameters except count
           when count is zero